add single post route,template, and link
trying to add new post route and form

--- a/app/assets/javascripts/templates/posts.hbs
+++ b/app/assets/javascripts/templates/posts.hbs
@@ -1,6 +1,10 @@
-posts
-
-{{#each post in controller}}
-  {{post.name}}
-  {{post.body}}
+<h2>posts</h2>
+{{#each}}
+  {{name}} says
+  {{body}}
+  {{created_at}}
+  {{#link-to 'post' this}}
+    {{id}}
+  {{/link-to}}
+  <br />
 {{/each}}
