--- a/app/assets/javascripts/templates/posts/new.hbs
+++ b/app/assets/javascripts/templates/posts/new.hbs
@@ -5,6 +5,6 @@
   {{/if}}
   <p>{{input type="text" value=name}}</p>
   <p>{{textarea value=body}}</p>
-  <p>{{view Fortchan12.UploadFile name='photo'}}</p>
+  <p>{{view Fortchan12.UploadFile name="photo" file=photo}}</p>
   <button type="submit">Create</button>
 </form>
