look at reversedPosts in the template

--- a/app/assets/javascripts/templates/posts.hbs
+++ b/app/assets/javascripts/templates/posts.hbs
@@ -10,7 +10,7 @@
 </form>
 
 <h2>posts</h2>
-{{#each posts}}
+{{#each reversedPosts}}
   {{name}} says
   {{body}}
   <img {{bind-attr src="photo_thumb_url"}} />
