--- a/app/assets/javascripts/templates/topics.hbs
+++ b/app/assets/javascripts/templates/topics.hbs
@@ -1,6 +1,6 @@
 <h1>topics</h1>
 <h2>make a new topic</h2>
-<form {{action 'create' newPost on="submit"}}>
+<form {{action 'create' on="submit"}}>
   {{#if isSaving}}
     <p>saving post...</p>
   {{/if}}
