clean up the other controllers too.
@mcfiredrill can we remove the post and posts controllers?

--- a/app/assets/javascripts/templates/posts.hbs
+++ b/app/assets/javascripts/templates/posts.hbs
@@ -1,5 +1,5 @@
 <h2>make a new post</h2>
-<form {{action 'create' newPost on="submit"}}>
+<form {{action 'create' on="submit"}}>
   {{#if isSaving}}
     <p>saving post...</p>
   {{/if}}
