--- a/app/assets/javascripts/templates/topic.hbs
+++ b/app/assets/javascripts/templates/topic.hbs
@@ -1,5 +1,5 @@
 <h2>reply</h2>
-<form {{action 'create' newPost on="submit"}}>
+<form {{action 'create' on="submit"}}>
   {{#if isSaving}}
     <p>saving post...</p>
   {{/if}}
