add link to full size images

--- a/app/assets/javascripts/templates/topics.hbs
+++ b/app/assets/javascripts/templates/topics.hbs
@@ -15,7 +15,7 @@
     {{#each post in topic.posts}}
       {{post.name}} says
       {{post.body}}
-      <img {{bind-attr src="post.photo_thumb_url"}} />
+      <a {{bind-attr href="post.photo_url"}}><img {{bind-attr src="post.photo_thumb_url"}} /></a>
       {{post.created_at}}
       <br />
     {{/each}}
