use moment formatting

--- a/app/assets/javascripts/templates/topics.hbs
+++ b/app/assets/javascripts/templates/topics.hbs
@@ -12,8 +12,8 @@
 
 {{#each}}
   <div class="topic">
-    {{this.updatedAt}}
     {{#each post in this.posts}}
+      {{format-date post.createdAt}}
       {{post.name}} says
       {{post.body}}
       <a {{bind-attr href="post.photo_url"}}><img {{bind-attr src="post.photo_thumb_url"}} /></a>
