use format-date in topic template

--- a/app/assets/javascripts/templates/topic.hbs
+++ b/app/assets/javascripts/templates/topic.hbs
@@ -10,6 +10,7 @@
 </form>
 
 {{#each post in posts}}
+  {{format-date post.createdAt}}
   {{post.name}} says
   {{post.body}}
   <a {{bind-attr href="post.photo_url"}}><img {{bind-attr src="post.photo_thumb_url"}} /></a>
