--- a/app/assets/javascripts/templates/topic.hbs
+++ b/app/assets/javascripts/templates/topic.hbs
@@ -3,10 +3,27 @@
   {{#if isSaving}}
     <p>saving post...</p>
   {{/if}}
-  <p>{{input type="text" value=name}}</p>
-  <p>{{textarea value=body}}</p>
-  <p>{{view Fortchan12.UploadFile name="photo" file=photo}}</p>
-  <button type="submit">Create</button>
+  <div class="postarea_container">
+    <div class="postarea">
+      <table>
+        <tr>
+          <td class="fieldlabel">Name</td>
+          <td class="field">{{input type="text" value=name}}</td>
+        </tr>
+        <tr>
+          <td class="fieldlabel">Post</td>
+          <td class="field">{{textarea value=body}}</td>
+        </tr>
+        <tr>
+          <td class="fieldlabel">Photo</td>
+          <td class="field">{{view Fortchan12.UploadFile name="photo" file=photo}}</td>
+        </tr>
+      </table>
+    </div>
+    <div class="actions">
+      <button type="submit">Post</button>
+    </div>
+  </div>
 </form>
 
 {{#each post in posts}}
